# korolab_documentation_hakyll

./: .gitignore  CHANGELOG.md  cabal.project  korolab-documentation-hakyll.cabal
app/: Main.hs
content/posts/: Вентиляция - Функции.md  Контейнеры.md  Модули автоматики 2024.md  Устройства.md
posts/: Вентиляция - Функции.html  Контейнеры.html  Конфигуратор обьекта.html  Конфигуратор обьекта.md  Модули автоматики 2024.html  Слои.html  Слои.md  Таблица процессов.html  Таблица процессов.md  Устройства.html  Функционал демостенда.html  Функционал демостенда.md  Эффекты для управляемой ленты.html  Эффекты для управляемой ленты.md
