cabal-version: 3.8
name: korolab-documentation-hakyll
version: 0.1.0.0
license: BSD-3-Clause
license-file: LICENSE
author: Evgeny Gazdovsky
maintainer: gazdovsky@gmail.com
category: Web
build-type: Simple

common common-options
  build-depends:
    base,
    hakyll,

  default-language: GHC2021
  default-extensions:

library
  import:
    common-options

  hs-source-dirs: src
  -- cabal-gild: discover src
  exposed-modules:
  build-depends:
    hakyll

  default-language: GHC2021

executable korolab-documentation-hakyll
  import:
    common-options

  main-is: Main.hs
  other-modules:
  hs-source-dirs: app
  default-language: GHC2021
